ensure leapfrogai namespace exists before creating secret

--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -77,6 +77,7 @@ jobs:
           run: |
             make build-supabase LOCAL_VERSION=e2e-test
             docker image prune -af
+            uds zarf tools kubectl create namespace leapfrogai
             uds zarf tools kubectl create secret generic supabase-keycloak-secret --from-literal=secret='YOUR_KEYCLOAK_CLIENT_SECRET' -n leapfrogai
             uds zarf package deploy packages/supabase/zarf-package-supabase-amd64-e2e-test.tar.zst --confirm
             rm packages/supabase/zarf-package-supabase-amd64-e2e-test.tar.zst
