--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -23,9 +23,9 @@ jobs:
           args: format --check
 
       # Javascript & Typescript Linting
-      - uses: actions/setup-node@v4
+      - uses: actions/setup-node@60edb5dd545a775178f52524783378180af0d1f8 # v4.0.2
         with:
-          node-version: 18
+          node-version-file: 'src/leapfrogai_ui/package.json'
 
       - name: Install UI Dependencies
         run: npm --prefix src/leapfrogai_ui ci
