--- a/src/leapfrogai_ui/package.json
+++ b/src/leapfrogai_ui/package.json
@@ -9,7 +9,7 @@
 		"test": "npm run test:integration && npm run test:unit",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --check . && eslint .",
+		"lint": "concurrently 'prettier --check .' 'eslint .'",
 		"format": "prettier --write . && eslint . --fix",
 		"test:integration": "playwright test",
 		"test:integration:ui": "playwright test --ui",
@@ -45,9 +45,9 @@
 		"husky": "^9.0.11",
 		"jsdom": "^24.0.0",
 		"otpauth": "^9.2.2",
+		"prettier-plugin-svelte": "^3.1.2",
 		"sass": "^1.71.1",
 		"svelte": "^4.2.12",
-		"prettier-plugin-svelte": "^3.1.2",
 		"svelte-check": "^3.6.9",
 		"tslib": "^2.4.1",
 		"typescript": "^5.4.2",
@@ -66,6 +66,7 @@
 		"@sveltejs/vite-plugin-svelte": "^3.0.2",
 		"@testing-library/user-event": "^14.5.2",
 		"ai": "^3.0.13",
+		"concurrently": "^8.2.2",
 		"fuse.js": "^7.0.0",
 		"msw": "^2.2.14",
 		"openai": "^4.29.0",
