--- a/src/leapfrogai_ui/package.json
+++ b/src/leapfrogai_ui/package.json
@@ -45,6 +45,7 @@
 		"husky": "^9.0.11",
 		"jsdom": "^24.0.0",
 		"otpauth": "^9.2.2",
+		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
 		"sass": "^1.71.1",
 		"svelte": "^4.2.12",
