--- a/packages/ui/chart/values.yaml
+++ b/packages/ui/chart/values.yaml
@@ -3,3 +3,4 @@ package:
   host: lfaiui
   supabase_url: '###ZARF_VAR_SUPABASE_URL###'
   supabase_anon_key: '###ZARF_VAR_SUPABASE_ANON_KEY###'
+  message_length_limit: '###ZARF_VAR_MESSAGE_LENGTH_LIMIT###'
