--- a/src/leapfrogai_api/pyproject.toml
+++ b/src/leapfrogai_api/pyproject.toml
@@ -5,8 +5,9 @@ description = "An API for LeapfrogAI that allows LeapfrogAI backends to connect 
 
 dependencies = [
     "fastapi >= 0.109.1",
+    "openai >= 1.21.1",
     "uvicorn >= 0.23.2",
-    "pydantic",
+    "pydantic >= 2.0.0",
     "python-multipart >= 0.0.7", #indirect dep of FastAPI to receive form data for file uploads
     "watchfiles >= 0.21.0",
     "leapfrogai_sdk",
