--- a/.github/workflows/e2e-shim.yaml
+++ b/.github/workflows/e2e-shim.yaml
@@ -18,7 +18,7 @@ on:
       - "CODEOWNERS"
       - ".gitignore"
       - "LICENSE"
-      - "pre-commit-config.yaml"
+      - ".pre-commit-config.yaml"
 
       # Catch pytests
       - "tests/pytest/**"
