--- a/.github/workflows/ui-test.yaml
+++ b/.github/workflows/ui-test.yaml
@@ -13,7 +13,7 @@ on:
 permissions: read-all
 
 concurrency:
-  group: uitest-${{ github.ref }}
+  group: ui-test-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
