--- a/src/leapfrogai_ui/package.json
+++ b/src/leapfrogai_ui/package.json
@@ -1,6 +1,9 @@
 {
 	"name": "leapfrogai-ui",
 	"version": "0.0.1",
+	"engines": {
+		"node": ">=18.1.0"
+	},
 	"private": true,
 	"scripts": {
 		"dev": "npm run supabase:start && vite dev",
@@ -9,8 +12,8 @@
 		"test": "npm run test:integration && npm run test:unit",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --check . && eslint .",
-		"format": "prettier --write .",
+		"lint": "concurrently 'prettier --check .' 'eslint .'",
+		"format": "prettier --write . && eslint . --fix",
 		"test:integration": "playwright test",
 		"test:integration:ui": "playwright test --ui",
 		"test:unit": "vitest run",
@@ -67,6 +70,7 @@
 		"@sveltejs/vite-plugin-svelte": "^3.1.0",
 		"@testing-library/user-event": "^14.5.2",
 		"ai": "^3.0.13",
+		"concurrently": "^8.2.2",
 		"fuse.js": "^7.0.0",
 		"msw": "^2.2.14",
 		"openai": "^4.38.5",
