Moves Zarf const out of configmap and into values

--- a/packages/supabase/manifests/declarative-conf-configmap.yaml
+++ b/packages/supabase/manifests/declarative-conf-configmap.yaml
@@ -17,7 +17,7 @@ data:
     ###
     basicauth_credentials:
       - consumer: DASHBOARD
-        username: ###ZARF_CONST_DASHBOARD_USERNAME###
+        username: {{SUPABASE_DASHBOARD_USERNAME}}
         password: {{SUPABASE_DASHBOARD_PASSWORD}}
 
     acls:
