--- a/uds-bundles/latest/cpu/uds-bundle.yaml
+++ b/uds-bundles/latest/cpu/uds-bundle.yaml
@@ -40,6 +40,7 @@ packages:
     path: ../../../packages/ui/
     ref: dev
     
+  # Supabase backend for the UI and API to interface with Postgresql
   - name: supabase
     path: ../../../packages/supabase/
     ref: dev
